--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,10 +3,7 @@
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
 
-trigger:
-  branches:
-    include:
-      - dev
+trigger: none
 
 pool:
   vmImage: ubuntu-latest
