Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -59,6 +59,7 @@ stages:
               backendAzureRmKey: '$(bkstrgkey)'
 
           - task: TerraformTaskV3@3
+            displayName: force unlock
             inputs:
               provider: 'azurerm'
               command: 'custom'
