Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -63,7 +63,7 @@ stages:
             inputs:
               provider: 'azurerm'
               command: 'custom'
-              customCommand: 'force-unlock'
+              customCommand: 'force-unlock $(LOCK_ID)'
               commandOptions: '-force'
               outputTo: 'console'
               environmentServiceNameAzureRM: 'ARM-SC'
